Fix thomson button spacing on mobile

--- a/portfolio/css/styles.css
+++ b/portfolio/css/styles.css
@@ -105,6 +105,7 @@ p {
 	color: black;
 	padding: 10px 30px;
 	margin-top: 40px;
+	margin-bottom: 30px;
 	display: inline-block;
 	border-radius: 20px;
 	transition: background 0.3s ease-in-out, color .3s ease-in-out;
